# ballsy-voice-assistant

./: .dockerignore  .env 2  .env.example  .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  MIGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_ANALYSIS.md  README.md  architecture_design.md  cursor.md  main.py  plan.md  pyproject.toml  render.yaml  requirements.txt  run.py  security_config.py  test.py  test_concurrent_users.py  test_security.py  todo.md  user_guide.md  vercel.json
alembic/: env.py
infra/: .gitignore  artifact_registry.tf  cloud_run.tf  cloud_sql.tf  iam.tf  main.tf  outputs.tf  project_services.tf  providers.tf  secrets.tf  terraform.tfvars.example  variables.tf
scripts/: build_frontend.sh  migrate_db.py
src/: __init__.py
src/backend/: __init__.py  app.py  config.py  database.py  tts.py  tts_cloudflare.py  tts_google.py
src/backend/ai/: __init__.py  gemini_client.py  nvidia_client.py
src/frontend/static/css/: styles.css
src/frontend/static/js/: app.js  config.js  ui.js  voice.js
src/frontend/templates/: index.html
