[project]
name = "ballsy-voice-assistant"
version = "1.0.0"
description = "AI Voice Assistant with Siri-like UI"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0", 
    "flask>=2.3.0",
    "python-dotenv>=1.0.0",
    "mistralai>=0.4.0",
    "SpeechRecognition>=3.10.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0.0",
    "jinja2>=3.1.0"
]
